refactor: update code to fit teacher rout requirements
