# internal/model/user.go
@@ -1,10 +1,8 @@
 package model
 
 type User struct {
-	ID        uint   `gorm:"primary_key"`
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-	UserName  string `json:"user_name" gorm:"unique"`
-	Email     string `json:"email" gorm:"unique"`
-	Password  string `json:"-"`
+	ID       uint   `gorm:"primary_key"`
+	Name     string `json:"name" gorm:"unique"`
+	Email    string `json:"email" gorm:"unique"`
+	Password string `json:"-"`
 }
